--- a/index.html
+++ b/index.html
@@ -199,6 +199,37 @@
     </footer>
 
     <script>
+        if(window.location.href != "https://drageno01.github.io/"){
+            if(window.location.href == "https://drageno01.github.io/?notepad" || window.location.href == "https://drageno01.github.io/#notepad"){
+                window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?articles" || window.location.href == "https://drageno01.github.io/#articles"){
+                window.location.replace("https://drageno01.github.io/404.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?articleLogin" || window.location.href == "https://drageno01.github.io/#articleLogin"){
+                window.location.replace("https://drageno01.github.io/404.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?oxley" || window.location.href == "https://drageno01.github.io/#oxley"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/OxleyOpenDay/index.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?andersonmdt" || window.location.href == "https://drageno01.github.io/#andersonmdt"){
+                window.location.replace("https://drageno01.github.io/404.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?mcc" || window.location.href == "https://drageno01.github.io/#mcc"){
+                window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?chat" || window.location.href == "https://drageno01.github.io/#chat"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/index.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?chatstatus" || window.location.href == "https://drageno01.github.io/#chatstatus"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/status.html")
+            }
+            if(window.location.href == "https://drageno01.github.io/?cs" || window.location.href == "https://drageno01.github.io/#cs"){
+                window.location.replace("https://drageno01.github.io/projects/mainprojects/cs/index.html")
+            }
+        }
+    </script>
+    <script>
         function srl() {
             window.scrollTo(0, 700)
         }
