--- a/chat/index.html
+++ b/chat/index.html
@@ -168,7 +168,7 @@
     </div>
 
     <script>
-        window.history.pushState("pageTitle", "DRAGE Chat", "/?chat");
+        // window.history.pushState("pageTitle", "DRAGE Chat", "/?chat");
         document.onkeydown = keydown;
         let showingImage = false;
 
