--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-5327146535138725">
-    <title>Modern Homepage</title>
+    <title>DRAGEno01 - GitHub</title>
     <style>
         body {
             font-family: Arial, sans-serif;
