--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
             }
             if(window.location.href == "https://drageno01.github.io/?chat" || window.location.href == "https://drageno01.github.io/#chat"){
-                window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/index.html")
+                window.location.replace("https://drageno01.github.io/chat")
             }
             if(window.location.href == "https://drageno01.github.io/?chatstatus" || window.location.href == "https://drageno01.github.io/#chatstatus"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/status.html")
