--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
             if(window.location.href == "https://drageno01.github.io/?notepad" || window.location.href == "https://drageno01.github.io/#notepad"){
                 window.location.replace("https://drageno01.github.io/projects/sideprojects/notepad.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?oldnotepad" || window.location.href == "https://drageno01.github.io/#oldnotepad"){
+                window.location.replace("https://drageno01.github.io/projects/sideprojects/oldnotepad.html")
+            }
             if(window.location.href == "https://drageno01.github.io/?articles" || window.location.href == "https://drageno01.github.io/#articles"){
                 window.location.replace("https://drageno01.github.io/404.html")
             }
