--- a/projects/sideprojects/notepad.html
+++ b/projects/sideprojects/notepad.html
@@ -405,8 +405,8 @@
 
                     <hr class="section-divider">
 
-                    <h3>Reset Appearance</h3>
-                    <button onclick="window.location.href = 'https://drageno01.github.io/?oldnotepad'" class="reset-btn" style="width: 200px; height: 40px;">Reset to Default Look</button>
+                    <h3>Reverts</h3>
+                    <button onclick="window.location.href = 'https://drageno01.github.io/?oldnotepad'" class="reset-btn" style="width: 200px; height: 40px;">Revert to Old Notepad</button>
                 </div>
                 <br>
             </div>
