--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 window.location.replace("https://drageno01.github.io/404.html")
             }
             if(window.location.href == "https://drageno01.github.io/?mcc" || window.location.href == "https://drageno01.github.io/#mcc"){
-                window.location.replace("https://drageno01.github.io/projects/sideprojects/mcc/index.html")
+                window.location.replace("https://drageno01.github.io/mcc/index.html")
             }
             if(window.location.href == "https://drageno01.github.io/?chat" || window.location.href == "https://drageno01.github.io/#chat"){
                 window.location.replace("https://drageno01.github.io/chat")
