--- a/projects/mainprojects/drage-chat/index.html
+++ b/projects/mainprojects/drage-chat/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>Redirecting...</p>
+    <script>
+        setTimeout(() => {
+            window.location.href = "https://drageno01.github.io/chat";
+        }, 10);
+    </script>
+</body>
+</html>
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -15,7 +33,7 @@
     <link rel="shortcut icon"
     href="https://yt3.googleusercontent.com/UqMYqkzSVzqj9h_Fv3cj-P60co_6nbuEuaEuUiC5d3Bf9IyoHKDaZi584ICJnqsNzZ9SHN6UTg=s900-c-k-c0x00ffffff-no-rj"
     type="image/x-icon">
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" /> -->
+     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" />
     <style>
         .showUserId {
             font-family: monospace;
@@ -59,10 +77,10 @@
                 <strong>Thank you!</strong> Thank you for being a Patreon member. We have given you some extra perks for this. (Perks: VIP Chat Tag, 1.5x Longer Messages)
             </div>
             <div class="alert alert-primary alert-dismissible fade show" id="twitchlive" style="display: none;">
-        <!-- <button type="button" class="btn-close" data-bs-dismiss="alert"></button> -->
+         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         <strong>LIVE CONTENT!</strong> DRAGEno01 is now live on Twitch. <a href="https://twitch.tv/DRAGEno01" target="_blank"><button style="background-color: rgb(97, 0, 195) !important; width: 100px !important; height: 30px !important; border-radius: 5px !important; color: white !important;">Watch Now</button></a>
       </div>
-            <!-- <div class="alert alert-danger alert-dismissible fade show">
+             <div class="alert alert-danger alert-dismissible fade show">
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       <strong>Systems Down</strong> There is currently an issue with our servers. We will be back once we have patched
       the issue... This may take a few hours.
@@ -71,7 +89,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       <strong>Info!</strong> The servers are back up, you can check the status <a
         href="https://drageno01.github.io/?chatstatus"><u>here</u></a>!
-    </div> -->
+    </div>
         </div>
         <script type="module" src="publish.js"></script>
 
@@ -188,7 +206,8 @@
         }
     </script>
 
-    <!-- <img src="https://c.tenor.com/jqv9q8ho5BEAAAAC/tenor.gif" width="80%"> -->
+     <img src="https://c.tenor.com/jqv9q8ho5BEAAAAC/tenor.gif" width="80%">
 </body>
 
 </html>
+-->
