--- a/chat/index.html
+++ b/chat/index.html
@@ -356,6 +356,11 @@
                 while we fix this issue!
             </div>
 
+            <div class="alert alert-danger alert-dismissible fade show" id="dbalert" style="display: none;">
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                <strong>Hey There!</strong> We will be sutting down the chat app starting mid Feb. We will launch V2 by the end of Feb.
+            </div>
+
             <div class="alert alert-warning alert-dismissible fade show" id="outofdateclient" style="display: none;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                 <strong>Hey!</strong> If you are seeing this message, it means that you are viewing an outdated version!
