--- a/chat/index.html
+++ b/chat/index.html
@@ -356,7 +356,7 @@
                 while we fix this issue!
             </div>
 
-            <div class="alert alert-danger alert-dismissible fade show" id="dbalert" style="display: none;">
+            <div class="alert alert-danger alert-dismissible fade show" id="dbalert" style="display: block;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                 <strong>Hey There!</strong> We will be sutting down the chat app starting mid Feb. We will launch V2 by the end of Feb.
             </div>
