--- a/chat/index.html
+++ b/chat/index.html
@@ -358,7 +358,7 @@
 
             <div class="alert alert-danger alert-dismissible fade show" id="dbalert" style="display: block;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong>Hey There!</strong> We will be temp sutting down the chat app starting mid Feb. We will launch V2 by the end of Feb. The web address will also change for V2.
+                <strong>Hey There!</strong> We will be sutting down the chat app starting end of February. We will launch V2 by the end of March.
             </div>
 
             <div class="alert alert-warning alert-dismissible fade show" id="outofdateclient" style="display: none;">
