--- a/chat/index.html
+++ b/chat/index.html
@@ -358,7 +358,7 @@
 
             <div class="alert alert-danger alert-dismissible fade show" id="dbalert" style="display: block;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                <strong>Hey There!</strong> We will be sutting down the chat app starting end of February. We will launch V2 by the end of March.
+                <strong>Hey There!</strong> We will be sutting down the chat app starting end of February. We will launch V2 by the end of April. Join the <a href="https://www.patreon.com/DRAGEno01">Patreon</a> to get updates!
             </div>
 
             <div class="alert alert-warning alert-dismissible fade show" id="outofdateclient" style="display: none;">
