--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
             if(window.location.href == "https://drageno01.github.io/?cs" || window.location.href == "https://drageno01.github.io/#cs"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/cs/index.html")
             }
+            if(window.location.href == "https://drageno01.github.io/?chatv1archive" || window.location.href == "https://drageno01.github.io/#chatv1archive"){
+                window.location.replace("http://adfoc.us/872061110041289")
+            }
         }
     </script>
     <script>
