--- a/chat/v1archive.html
+++ b/chat/v1archive.html
@@ -281,6 +281,10 @@
             renderArchive(filtered);
         }
     </script>
+
+    <script>
+        window.history.pushState("pageTitle", "DRAGE-Chat V1 Archives", "?chatv1archive");
+    </script>
 </body>
 
 </html>
