--- a/chat/v1archive.html
+++ b/chat/v1archive.html
@@ -283,7 +283,7 @@
     </script>
 
     <script>
-        window.history.pushState("pageTitle", "DRAGE-Chat V1 Archives", "?chatv1archive");
+        window.history.pushState("pageTitle", "DRAGE-Chat V1 Archives", "/?chatv1archive");
     </script>
 </body>
 
