--- a/projects/sideprojects/oldnotepad.html
+++ b/projects/sideprojects/oldnotepad.html
@@ -370,7 +370,7 @@ The text you enter will appear directly within the box as you type." onchange="s
         // }
     </script>
     <script>
-        window.history.pushState("pageTitle", "Online Notpad", "/?notepad");
+        window.history.pushState("pageTitle", "Online Notpad", "/?oldnotepad");
     </script>
 
     <script>
