--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 window.location.replace("https://drageno01.github.io/mcc/index.html")
             }
             if(window.location.href == "https://drageno01.github.io/?chat" || window.location.href == "https://drageno01.github.io/#chat"){
-                window.location.replace("https://drageno01.github.io/chat")
+                window.location.replace("https://drage-chat.web.app/")
             }
             if(window.location.href == "https://drageno01.github.io/?chatstatus" || window.location.href == "https://drageno01.github.io/#chatstatus"){
                 window.location.replace("https://drageno01.github.io/projects/mainprojects/drage-chat/status.html")
