--- a/chat/index.html
+++ b/chat/index.html
@@ -346,6 +346,9 @@
 </head>
 
 <body id="body">
+    <script>
+        window.location.href = "https://drage-chat.web.app/"
+    </script>
     <div id="mainapp">
         <br>
         <div class="container mt-3">
